# rsplugin

./: Cargo.toml
gst-plugin-file/src/: filesink.rs
gst-plugin-simple/src/: sink.rs
gst-plugin/src/: sink.rs
gst-vaapi/: Cargo.toml
gst-vaapi/src/: lib.rs  vaapisink.rs
src/: buffer.rs  lib.rs  plugin.c  rsdemuxer.c  rsdemuxer.rs  sillydemux.rs
