[package]
name = "gst-vaapi"
version = "0.1.0"
authors = ["Hyunjun Ko <zzoon@igalia.com>"]
repository = "https://github.com/sdroege/rsplugin"
license = "MIT/Apache-2.0"

[dependencies]
url = "1.1"
gst-plugin = { path="../gst-plugin" }
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
libva-rust = { path="../../libva-rust" }
x11 = "2.3"

[lib]
name = "gstrsvaapi"
crate-type = ["cdylib"]
path = "src/lib.rs"
